z-index bug fix

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -722,7 +722,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 99;
+    z-index: 1;
 }
 
 @media only screen and (max-width: 1900px) {
